Setup express and apollo server

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^17.0.8",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
@@ -22,7 +23,11 @@
     "@mikro-orm/core": "^4.5.10",
     "@mikro-orm/migrations": "^4.5.10",
     "@mikro-orm/postgresql": "^4.5.10",
-    "pg": "^8.7.1"
+    "apollo-server-express": "^3.6.1",
+    "express": "^4.17.2",
+    "graphql": "^15.8.0",
+    "pg": "^8.7.1",
+    "type-graphql": "^1.1.1"
   },
   "mikro-orm": {
     "useTsNode": true,
