User login and session with cookies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "typeRoots": [".src/types", ".node_modules/@types"],
   "compilerOptions": {
     "target": "es2017",
     "module": "commonjs",
