--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/connect-redis": "^0.0.18",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
     "@types/node": "^17.0.8",
+    "@types/redis": "^2.8.32",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
@@ -26,9 +29,12 @@
     "@mikro-orm/postgresql": "^4.5.10",
     "apollo-server-express": "^3.6.1",
     "argon2": "^0.28.3",
+    "connect-redis": "^6.0.0",
     "express": "^4.17.2",
+    "express-session": "^1.17.2",
     "graphql": "^15.8.0",
     "pg": "^8.7.1",
+    "redis": "^3.1.2",
     "type-graphql": "^1.1.1"
   },
   "mikro-orm": {
