--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/connect-redis": "^0.0.18",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/node": "^17.0.8",
@@ -30,6 +31,7 @@
     "apollo-server-express": "^3.6.1",
     "argon2": "^0.28.3",
     "connect-redis": "^6.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "graphql": "^15.8.0",
