--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@mikro-orm/core": "^4.5.10",
     "@mikro-orm/migrations": "^4.5.10",
     "@mikro-orm/postgresql": "^4.5.10",
+    "@types/nodemailer": "^6.4.4",
     "apollo-server-express": "^3.6.1",
     "argon2": "^0.28.3",
     "connect-redis": "^6.0.0",
@@ -35,6 +36,7 @@
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "graphql": "^15.8.0",
+    "nodemailer": "^6.7.2",
     "pg": "^8.7.1",
     "redis": "^3.1.2",
     "type-graphql": "^1.1.1"
