--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
+    "@types/ioredis": "^4.28.7",
     "@types/node": "^17.0.8",
+    "@types/nodemailer": "^6.4.4",
     "@types/redis": "^2.8.32",
+    "@types/uuid": "^8.3.4",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
@@ -28,7 +31,6 @@
     "@mikro-orm/core": "^4.5.10",
     "@mikro-orm/migrations": "^4.5.10",
     "@mikro-orm/postgresql": "^4.5.10",
-    "@types/nodemailer": "^6.4.4",
     "apollo-server-express": "^3.6.1",
     "argon2": "^0.28.3",
     "connect-redis": "^6.0.0",
@@ -36,10 +38,11 @@
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "graphql": "^15.8.0",
+    "ioredis": "^4.28.3",
     "nodemailer": "^6.7.2",
     "pg": "^8.7.1",
-    "redis": "^3.1.2",
-    "type-graphql": "^1.1.1"
+    "type-graphql": "^1.1.1",
+    "uuid": "^8.3.2"
   },
   "mikro-orm": {
     "useTsNode": true,
