--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "watch": "tsc -w",
     "dev": "nodemon dist/index.js",
-    "start": "node dist/index.js",
-    "create:migration": "mikro-orm migration:create"
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -27,10 +26,6 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "@mikro-orm/cli": "^4.5.10",
-    "@mikro-orm/core": "^4.5.10",
-    "@mikro-orm/migrations": "^4.5.10",
-    "@mikro-orm/postgresql": "^4.5.10",
     "apollo-server-express": "^3.6.1",
     "argon2": "^0.28.3",
     "connect-redis": "^6.0.0",
@@ -42,13 +37,7 @@
     "nodemailer": "^6.7.2",
     "pg": "^8.7.1",
     "type-graphql": "^1.1.1",
+    "typeorm": "^0.2.41",
     "uuid": "^8.3.2"
-  },
-  "mikro-orm": {
-    "useTsNode": true,
-    "configPaths": [
-      "./src/mikro-orm.config.ts",
-      "./dist/mikro-orm.config.js"
-    ]
   }
 }
