--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "argon2": "^0.28.3",
     "connect-redis": "^6.0.0",
     "cors": "^2.8.5",
+    "dataloader": "^2.0.0",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "graphql": "^15.8.0",
